...
      <View className="flex-1 bg-background-0 rounded-t-3xl px-6 pt-8 pb-6">
        <VStack space="lg" className="flex-1">
          <FormControl isInvalid={!!localError || !!error}>
            <VStack space="sm">
              <View className="flex-row">
                <Input 
                  testID="login-phone"
                  size="lg"
                  className="flex-1 bg-background-50  h-12"
                >
                   <View className="bg-brand-400 h-12 px-4 justify-center">
                  <Text className="text-typography-900 font-medium">+91</Text>
                </View>
...
              )}
            </VStack>
          </FormControl>

          <VStack space="md">
            <Button
              testID="login-submit"
              size="lg"
              onPress={handleLogin}
              isDisabled={isLoading}
              className="bg-brand-500 rounded-lg shadow-sm"
            >
              <ButtonText className="text-typography-white font-semibold">
...
